I did stuff with videos

--- a/final/index.html
+++ b/final/index.html
@@ -2,196 +2,197 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="https://use.typekit.net/xcp6ekd.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Andrew Lefurge - News Deck</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
+	<link rel="stylesheet" href="https://use.typekit.net/xcp6ekd.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="style.css">
+	<title>Andrew Lefurge - News Deck</title>
 </head>
 
 <body>
-    <nav>
-        <div class="nav_elements">
-            <h1 class="site_name">Lefurge Design</h1>
-            <div class="links">
-                <a href="">About</a>
-                <a href="">Product Design</a>
-                <a href="">Motion Graphics</a>
-            </div>
-        </div>
-    </nav>
-    <div id="return_button">
-        <a href="#header_gallary"><img class="icon" src="images/down_icon.svg" alt="Scroll Down Icon"></a>
-    </div>
-    <div id="navpanel">
-        <div id="navtoggle"><span id="open">+</span><span id="close">-</span></div>
-        <div id="navmenu">
-            <p>Page Index</p>
-            <ul>
-                <li><span class="submenu">Background</span>
-                    <ul class="submenu-panel">
-                        <li><a href="jquery-slide-panel.html">Project Intro</a></li>
-                        <li><a href="jquery-slide-side.html">Project Facts</a></li>
-                    </ul>
-                </li>
-                <li>Goal</li>
-                <li><span class="submenu">Research</span>
-                    <ul class="submenu-panel">
-                        <li>Getting Insights</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <header id="header_gallary">
-        <div>
-            <h1>News Deck</h1>
-            <a href="#project_intro"><img class="icon" src="images/down_icon.svg" alt="Scroll Down Icon"></a>
-        </div>
-        <img class="slide" src="images/daniil-silantev-1147022-unsplash_crop_high_res.jpg" alt="Warm Forest Photo">
-        <img class="slide" src="images/john-westrock-1075374-unsplash_crop_high_res.jpg" alt="Foggy Forest Photo">
-        <img class="slide" src="images/marita-kavelashvili-1151412-unsplash_crop_high_res.jpg" alt="Foggy Forest Valley Photo">
-    </header>
-    <div class="content">
-        <div class="grid">
+	<nav>
+		<div class="nav_elements">
+			<h1 class="site_name">Lefurge Design</h1>
+			<div class="links">
+				<a href="">About</a>
+				<a href="">Product Design</a>
+				<a href="">Motion Graphics</a>
+			</div>
+		</div>
+	</nav>
+	<div id="return_button">
+		<a href="#header_gallary"><img class="icon" src="images/down_icon.svg" alt="Scroll Down Icon"></a>
+	</div>
+	<div id="navpanel">
+		<div id="navtoggle"><span id="open">+</span><span id="close">-</span></div>
+		<div id="navmenu">
+			<p>Page Index</p>
+			<ul>
+				<li><span class="submenu">Background</span>
+					<ul class="submenu-panel">
+						<li><a href="jquery-slide-panel.html">Project Intro</a></li>
+						<li><a href="jquery-slide-side.html">Project Facts</a></li>
+					</ul>
+				</li>
+				<li>Goal</li>
+				<li><span class="submenu">Research</span>
+					<ul class="submenu-panel">
+						<li>Getting Insights</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<header id="header_gallary">
+		<div>
+			<h1>News Deck</h1>
+			<a href="#project_intro"><img class="icon" src="images/down_icon.svg" alt="Scroll Down Icon"></a>
+		</div>
+		<img class="slide" src="images/daniil-silantev-1147022-unsplash_crop_high_res.jpg" alt="Warm Forest Photo">
+		<img class="slide" src="images/john-westrock-1075374-unsplash_crop_high_res.jpg" alt="Foggy Forest Photo">
+		<img class="slide" src="images/marita-kavelashvili-1151412-unsplash_crop_high_res.jpg" alt="Foggy Forest Valley Photo">
+	</header>
+	<div class="content">
+		<div class="grid">
 
-            <section id="project_intro">
-                <h1>News Deck</h1>
-                <h3>Product Concept</h3>
-                <p>People are constantly overwhelmed by the amount of information they are asked to consume on a regular basis. We are inundated with heaps of news, only a small percentage of which we actually care about. So I designed a mobile first news aggregation app that enables users to better manage and compartmentalize the news they consume.</p>
-            </section>
-            <aside>
-                <h3>Role</h3>
-                <p>Visual Design, Interaction Design</p>
-                <h3>Duration</h3>
-                <p>April - May 2018</p>
-                <h3>Tools</h3>
-                <p>Invision Studio</p>
-                <button onclick="window.location.href='https://paper.dropbox.com/doc/NewsDeck-News-Aggregation--ARD5biCMdRHmiYX9fU76vpcJAg-BNrcUzAmlBXhfyAavQUSZ'" class="deckButt">View Deck</button>
-            </aside>
-            <article>
-                <h2>Making News Actionable</h2>
-                <p>News is typically presented today as a never ending feed. People endlessly scroll to the bottom to see if they missed something interesting even if it isn't relevant anymore. News Deck avoids this by presenting news as a finite deck of
-                    cards which are intuitive to sort and interact with.</p>
-
-            </article>
-            <article class="gallery">
-                <div class="cell">
-                    <img src="../project2/news_deck/images/Bookmark_Crop.jpg">
-                </div>
-                <div class="cell">
-                    <img src="../project2/news_deck/images/insights_crop.jpg">
-                </div>
-            </article>
-            <article>
-                <h2>Getting Insights</h2>
-                <p>In addition to making news more actionable, news deck will actively make suggestions for how the user can reduce the amount of news in their feed. These "Insights" are based on user behavior and can either be acted on or dismissed.</p>
-            </article>
-        </div>
-    </div>
+			<section id="project_intro">
+				<h1>News Deck</h1>
+				<h3>Product Concept</h3>
+				<p>People are constantly overwhelmed by the amount of information they are asked to consume on a regular basis. We are inundated with heaps of news, only a small percentage of which we actually care about. So I designed a mobile first news aggregation app that enables users to better manage and compartmentalize the news they consume.</p>
+			</section>
+			<aside>
+				<h3>Role</h3>
+				<p>Visual Design, Interaction Design</p>
+				<h3>Duration</h3>
+				<p>April - May 2018</p>
+				<h3>Tools</h3>
+				<p>Invision Studio</p>
+				<button onclick="window.location.href='https://paper.dropbox.com/doc/NewsDeck-News-Aggregation--ARD5biCMdRHmiYX9fU76vpcJAg-BNrcUzAmlBXhfyAavQUSZ'" class="deckButt">View Deck</button>
+			</aside>
+			<article>
+				<h2>Making News Actionable</h2>
+				<p>News is typically presented today as a never ending feed. People endlessly scroll to the bottom to see if they missed something interesting even if it isn't relevant anymore. News Deck avoids this by presenting news as a finite deck of cards which are intuitive to sort and interact with.</p>
+			</article>
+			<article class="gallery">
+				<div class="cell">
+					<img src="../project2/news_deck/images/Bookmark_Crop.jpg">
+				</div>
+				<div class="cell">
+					<img src="../project2/news_deck/images/insights_crop.jpg">
+				</div>
+			</article>
+			<article>
+				<h2>Getting Insights</h2>
+				<p>In addition to making news more actionable, news deck will actively make suggestions for how the user can reduce the amount of news in their feed. These "Insights" are based on user behavior and can either be acted on or dismissed.</p>
+			</article>
+			<figure class="fullsize">
+				<video autoplay playsinline controls loop src="videos/news_deck/home_interaction.mp4"></video>
+			</figure>
+		</div>
+	</div>
 </body>
 <script>
-    //makes the carousal change
-    var myIndex = 0;
-    carousel();
+	//makes the carousal change
+	var myIndex = 0;
+	carousel();
 
-    function carousel() {
-        var i;
-        var x = document.getElementsByClassName("slide");
-        for (i = 0; i < x.length; i++) {
-            x[i].style.display = "none";
-        }
-        myIndex++;
-        if (myIndex > x.length) {
-            myIndex = 1
-        }
-        x[myIndex - 1].style.display = "block";
-        setTimeout(carousel, 4000);
-    }
+	function carousel() {
+		var i;
+		var x = document.getElementsByClassName("slide");
+		for (i = 0; i < x.length; i++) {
+			x[i].style.display = "none";
+		}
+		myIndex++;
+		if (myIndex > x.length) {
+			myIndex = 1
+		}
+		x[myIndex - 1].style.display = "block";
+		setTimeout(carousel, 4000);
+	}
 
-    $(window).scroll(function() {
-        var $height = $(window).scrollTop();
-        if ($height > 50) {
-            $("nav").css({
-                "background-color": "black",
-                "opacity": ".8"
-            });
-            $("a").css({
-                "color": "#fafafa",
-                "opacity": "1"
-            });
-            $(".site_name").css({
-                "color": "#fafafa",
-                "opacity": "1"
-            });
-            $("header div").css({
-                "opacity": "0"
-            });
-            $("#return_button").css({
-                "opacity": ".8"
-            });
-        } else {
-            $("nav").css({
-                "opacity": "1",
-                "background": "none"
-            });
-            $("a").css({
-                "color": "#333333"
-            });
-            $(".site_name").css({
-                "color": "#333333"
-            });
-            $("header h1").css({
-                "opacity": ".8"
-            });
-            $("header div").css({
-                "opacity": ".8"
-            });
-            $("#return_button").css({
-                "opacity": "0"
-            });
-        }
-    });
+	$(window).scroll(function() {
+		var $height = $(window).scrollTop();
+		if ($height > 50) {
+			$("nav").css({
+				"background-color": "black",
+				"opacity": ".8"
+			});
+			$("a").css({
+				"color": "#fafafa",
+				"opacity": "1"
+			});
+			$(".site_name").css({
+				"color": "#fafafa",
+				"opacity": "1"
+			});
+			$("header div").css({
+				"opacity": "0"
+			});
+			$("#return_button").css({
+				"opacity": ".8"
+			});
+		} else {
+			$("nav").css({
+				"opacity": "1",
+				"background": "none"
+			});
+			$("a").css({
+				"color": "#333333"
+			});
+			$(".site_name").css({
+				"color": "#333333"
+			});
+			$("header h1").css({
+				"opacity": ".8"
+			});
+			$("header div").css({
+				"opacity": ".8"
+			});
+			$("#return_button").css({
+				"opacity": "0"
+			});
+		}
+	});
 
-    $('header a').click(function() {
-        let target = $(this.hash);
-        $('html, body').animate({
-            scrollTop: target.offset().top - 65
-        }, 600);
-    });
-    $('#return_button a').click(function() {
-        let target = $(this.hash);
-        $('html, body').animate({
-            scrollTop: target.offset().top
-        }, 600);
-    });
+	$('header a').click(function() {
+		let target = $(this.hash);
+		$('html, body').animate({
+			scrollTop: target.offset().top - 65
+		}, 600);
+	});
+	$('#return_button a').click(function() {
+		let target = $(this.hash);
+		$('html, body').animate({
+			scrollTop: target.offset().top
+		}, 600);
+	});
 
-    $("#close").click(function() {
-        $("#navpanel").animate({
-            left: '-250'
-        }, "slow");
-        $("#close").toggle();
-        $("#open").toggle();
-        $("#navpanel").css({
-            "opacity": ".5"
-        });
-    });
+	$("#close").click(function() {
+		$("#navpanel").animate({
+			left: '-250'
+		}, "slow");
+		$("#close").toggle();
+		$("#open").toggle();
+		$("#navpanel").css({
+			"opacity": ".5"
+		});
+	});
 
-    $("#open").click(function() {
-        $("#navpanel").animate({
-            left: '0px'
-        }, "slow");
-        $("#close").toggle();
-        $("#open").toggle();
-        $("#navpanel").css({
-            "opacity": ".8"
-        });
-    });
+	$("#open").click(function() {
+		$("#navpanel").animate({
+			left: '0px'
+		}, "slow");
+		$("#close").toggle();
+		$("#open").toggle();
+		$("#navpanel").css({
+			"opacity": ".8"
+		});
+	});
 
-    $(".submenu").click(function() {
-        $(this).next(".submenu-panel").toggle();
-    });
+	$(".submenu").click(function() {
+		$(this).next(".submenu-panel").toggle();
+	});
 </script>
 
 
