added practicle to my directory

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
 
 		</ul>
 	</div>
+	<div class="card">
+		<h2>Final Practicle</h2>
+		<ul>
+			<li><a href="fall2018final/fall2018final.html">Final Practicle</a></li>
+
+		</ul>
+	</div>
 </body>
 
 </html>
