--- a/final/index.html
+++ b/final/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/xcp6ekd.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Andrew Lefurge - News Deck</title>
+    <title>Andrew Lefurge - Home</title>
 </head>
 
 <body>
@@ -46,20 +46,20 @@
     </div>
     <header id="header_gallary">
         <div>
-            <h1 id="welcome_dialogue">Hi, I'm Andrew</h1>
+            <h1>Hi, I'm Andrew</h1>
             <a href="#project_intro"><img class="icon" src="images/down_icon.svg" alt="Scroll Down Icon"></a>
         </div>
-        <div id="header_video">
-            <video autoplay playsinline loop src="videos/home/home_video.mp4"></video>
-        </div>
+        <img class="slide" src="images/daniil-silantev-1147022-unsplash_crop_high_res.jpg" alt="Warm Forest Photo">
+        <img class="slide" src="images/john-westrock-1075374-unsplash_crop_high_res.jpg" alt="Foggy Forest Photo">
+        <img class="slide" src="images/marita-kavelashvili-1151412-unsplash_crop_high_res.jpg" alt="Foggy Forest Valley Photo">
     </header>
     <div class="content">
         <div class="grid">
 
             <section id="project_intro">
-                <h1>News Deck</h1>
-                <h3>Product Concept</h3>
-                <p>People are constantly overwhelmed by the amount of information they are asked to consume on a regular basis. We are inundated with heaps of news, only a small percentage of which we actually care about. So I designed a mobile first news aggregation app that enables users to better manage and compartmentalize the news they consume.</p>
+                <h1>Andrew Lefurge</h1>
+                <h3>Product Designer</h3>
+                <p>A highly motivated young designer who is passionate about building the next generation of innovative digital products and experiences. </p>
             </section>
             <aside>
                 <h3>Role</h3>
@@ -68,16 +68,49 @@
                 <p>April - May 2018</p>
                 <h3>Tools</h3>
                 <p>Invision Studio</p>
-                <button onclick="window.location.href='https://paper.dropbox.com/doc/NewsDeck-News-Aggregation--ARD5biCMdRHmiYX9fU76vpcJAg-BNrcUzAmlBXhfyAavQUSZ'" class="deckButt">View Deck</button>
+                <button onclick="window.location.href='https://paper.dropbox.com/doc/NewsDeck-News-Aggregation--ARD5biCMdRHmiYX9fU76vpcJAg-BNrcUzAmlBXhfyAavQUSZ'" class="deckButt">Resume</button>
             </aside>
-        </div>
-        <div class="projects">
-            <div class="project_wrapper">
-            </div>
+            <article>
+                <h2>Making News Actionable</h2>
+                <p>News is typically presented today as a never ending feed. People endlessly scroll to the bottom to see if they missed something interesting even if it isn't relevant anymore. News Deck avoids this by presenting news as a finite deck of cards which are intuitive to sort and interact with.</p>
+            </article>
+            <article class="gallery">
+                <div class="cell">
+                    <img src="../project2/news_deck/images/Bookmark_Crop.jpg">
+                </div>
+                <div class="cell">
+                    <img src="../project2/news_deck/images/insights_crop.jpg">
+                </div>
+            </article>
+            <article>
+                <h2>Getting Insights</h2>
+                <p>In addition to making news more actionable, news deck will actively make suggestions for how the user can reduce the amount of news in their feed. These "Insights" are based on user behavior and can either be acted on or dismissed.</p>
+            </article>
+            <figure class="fullsize">
+                <video autoplay playsinline controls loop src="videos/news_deck/home_interaction.mp4"></video>
+            </figure>
         </div>
     </div>
 </body>
 <script>
+    //makes the carousal change
+    var myIndex = 0;
+    carousel();
+
+    function carousel() {
+        var i;
+        var x = document.getElementsByClassName("slide");
+        for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+        }
+        myIndex++;
+        if (myIndex > x.length) {
+            myIndex = 1
+        }
+        x[myIndex - 1].style.display = "block";
+        setTimeout(carousel, 4000);
+    }
+
     $(window).scroll(function() {
         var $height = $(window).scrollTop();
         if ($height > 50) {
