slight mobile improvements and bad hamburger menu

--- a/final/index.html
+++ b/final/index.html
@@ -2,250 +2,262 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="https://use.typekit.net/xcp6ekd.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="style.css">
-	<title>Andrew Lefurge - Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" href="https://use.typekit.net/xcp6ekd.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Andrew Lefurge - Home</title>
 </head>
 
 <body>
-	<nav>
-		<div class="nav_elements">
-			<h1 class="site_name">Lefurge Design</h1>
-			<div class="links">
-				<a href="index.html">About</a>
-				<a href="newsdeck.html">Product Design</a>
-				<a href="">Motion Graphics</a>
-			</div>
-		</div>
-	</nav>
-	<div id="return_button">
-		<a href="#header_gallary"><img class="icon" src="images/down_icon.svg" alt="Scroll Down Icon"></a>
-	</div>
-	<div id="navpanel">
-		<div id="navtoggle"><span id="open">+</span><span id="close">-</span></div>
-		<div id="navmenu">
-			<p>Page Index</p>
-			<ul>
-				<li><span class="submenu">Background</span>
-					<ul class="submenu-panel">
-						<li><a href="jquery-slide-panel.html">Project Intro</a></li>
-						<li><a href="jquery-slide-side.html">Project Facts</a></li>
-					</ul>
-				</li>
-				<li>Goal</li>
-				<li><span class="submenu">Research</span>
-					<ul class="submenu-panel">
-						<li>Getting Insights</li>
-					</ul>
-				</li>
-			</ul>
-		</div>
-	</div>
-	<header id="header_gallary">
-		<div>
-			<h1>Hi I'm Andrew</h1>
-			<a href="#project_intro"><img class="icon" src="images/down_icon.svg" alt="Scroll Down Icon"></a>
-		</div>
-		<img class="slidestill" src="images/about_cover.jpg" alt="Me Skiing">
-	</header>
-	<div class="content">
-		<div class="grid">
-			<section id="project_intro">
-				<h1>Andrew Lefurge</h1>
-				<h3>Product Designer</h3>
-				<p>A multidisciplinary designer with a background in product, motion, and 3D design building inclusive products and experiences that delight and engage people in new and interesting ways.</p>
-			</section>
-			<aside>
-				<h3>Email</h3>
-				<p>andlefurge@gmail.com</p>
-				<h3>Phone</h3>
-				<p>(862) 268-3561</p>
-				<h3>Twitter</h3>
-				<p>@alefurge</p>
-				<button onclick="window.location.href='https://paper.dropbox.com/doc/NewsDeck-News-Aggregation--ARD5biCMdRHmiYX9fU76vpcJAg-BNrcUzAmlBXhfyAavQUSZ'" class="deckButt">Resume</button>
-			</aside>
-			<div id="projectgrid">
-				<figure class="slideshow">
-				</figure>
-				<section id="profile">
+    <nav>
+        <div class="nav_elements">
+            <h1 class="site_name">Lefurge Design</h1>
+            <div class="topnav" id="myTopnav">
+                <a href="#Home" class="active">Home</a>
+                <a href="#Projects">Projects</a>
+                <a href="#Bonus">Bonus</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
+        </div>
+    </nav>
+    <div id="return_button">
+        <a href="#header_gallary"><img class="icon" src="images/down_icon.svg" alt="Scroll Down Icon"></a>
+    </div>
+    <div id="navpanel">
+        <div id="navtoggle"><span id="open">+</span><span id="close">-</span></div>
+        <div id="navmenu">
+            <p>Page Index</p>
+            <ul>
+                <li><span class="submenu">Background</span>
+                    <ul class="submenu-panel">
+                        <li><a href="jquery-slide-panel.html">Project Intro</a></li>
+                        <li><a href="jquery-slide-side.html">Project Facts</a></li>
+                    </ul>
+                </li>
+                <li>Goal</li>
+                <li><span class="submenu">Research</span>
+                    <ul class="submenu-panel">
+                        <li>Getting Insights</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <header id="header_gallary">
+        <div>
+            <h1>Hi I'm Andrew</h1>
+            <a href="#project_intro"><img class="icon" src="images/down_icon.svg" alt="Scroll Down Icon"></a>
+        </div>
+        <img class="slidestill" src="images/about_cover.jpg" alt="Me Skiing">
+    </header>
+    <div class="content">
+        <div class="grid">
+            <section id="project_intro">
+                <h1>Andrew Lefurge</h1>
+                <h3>Product Designer</h3>
+                <p>A multidisciplinary designer with a background in product, motion, and 3D design building inclusive products and experiences that delight and engage people in new and interesting ways.</p>
+            </section>
+            <aside>
+                <h3>Email</h3>
+                <p>andlefurge@gmail.com</p>
+                <h3>Phone</h3>
+                <p>(862) 268-3561</p>
+                <h3>Twitter</h3>
+                <p>@alefurge</p>
+                <button onclick="window.location.href='https://paper.dropbox.com/doc/NewsDeck-News-Aggregation--ARD5biCMdRHmiYX9fU76vpcJAg-BNrcUzAmlBXhfyAavQUSZ'" class="deckButt">Resume</button>
+            </aside>
+            <div id="projectgrid">
+                <figure class="slideshow">
+                </figure>
+                <div class="hideshow">
+                    <h1>Projects</h1>
+                    <figure class="hideshowicon">
+                        <img src="icons/baseline-expand_more-24px.svg" alt="Hide/Show Icon">
+                    </figure>
+                    <hr>
+                </div>
+                <section class="projgallery">
+                    <div id="newsdeck">
+                        <figure class="thumbnail">
+                            <img src="images/test1.jpg" alt="News Deck Thumbnail">
+                        </figure>
+                        <div class="carddetails">
+                            <h2>News Deck</h2>
+                        </div>
+                    </div>
+                    <div id="mobilebanking">
+                        <figure class="thumbnail">
+                            <img src="images/test2.jpg" alt="Mobile Banking Thumbnail">
+                        </figure>
+                        <div class="carddetails">
+                            <h2>Mobile Banking</h2>
+                        </div>
+                    </div>
+                    <div id="vehicleregistration">
+                        <figure class="thumbnail">
+                            <img src="images/test3.jpg" alt="Vehicle Registration Thumbnail">
+                        </figure>
+                        <div class="carddetails">
+                            <h2>Vehicle Registration</h2>
+                        </div>
+                    </div>
+                    <div id="strongmuseum">
+                        <figure class="thumbnail">
+                            <img src="images/test3.jpg" alt="Vehicle Registration Thumbnail">
+                        </figure>
+                        <div class="carddetails">
+                            <h2>Strong Meseum</h2>
+                        </div>
+                    </div>
+                </section>
+                <div class="hideshow">
+                    <h1>Bonus</h1>
+                    <figure class="hideshowicon">
+                        <img src="icons/baseline-expand_more-24px.svg" alt="Hide/Show Icon">
+                    </figure>
+                    <hr>
+                </div>
+                <section class="projgallery">
+                    <div id="newsdeckcard">
+                        <figure class="thumbnail">
+                            <img src="" alt="News Deck Thumbnail">
+                        </figure>
+                        <div class="carddetails">
+                            <h2>News Deck</h2>
+                        </div>
+                    </div>
+                    <div id="mobilebanking">
+                        <figure class="thumbnail">
+                            <img src="" alt="Mobile Banking Thumbnail">
+                        </figure>
+                        <div class="carddetails">
+                            <h2>Mobile Banking</h2>
+                        </div>
+                    </div>
+                    <div id="Vehicle Registration">
+                        <figure class="thumbnail">
+                            <img src="" alt="Vehicle Registration Thumbnail">
+                        </figure>
+                        <div class="carddetails">
+                            <h2>Vehicle Registration</h2>
+                        </div>
+                    </div>
+                    <div id="Vehicle Registration">
+                        <figure class="thumbnail">
+                            <img src="" alt="Vehicle Registration Thumbnail">
+                        </figure>
+                        <div class="carddetails">
+                            <h2>Vehicle Registration</h2>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
 
-				</section>
-				<div class="hideshow">
-					<h1>Projects</h1>
-					<figure class="hideshowicon">
-						<img src="icons/baseline-expand_more-24px.svg" alt="Hide/Show Icon">
-					</figure>
-				</div>
-				<section class="projgallery">
-					<div id="newsdeck">
-						<figure class="thumbnail">
-							<img src="images/test1.jpg" alt="News Deck Thumbnail">
-						</figure>
-						<div class="carddetails">
-							<h2>News Deck</h2>
-						</div>
-					</div>
-					<div id="mobilebanking">
-						<figure class="thumbnail">
-							<img src="images/test2.jpg" alt="Mobile Banking Thumbnail">
-						</figure>
-						<div class="carddetails">
-							<h2>Mobile Banking</h2>
-						</div>
-					</div>
-					<div id="vehicleregistration">
-						<figure class="thumbnail">
-							<img src="images/test3.jpg" alt="Vehicle Registration Thumbnail">
-						</figure>
-						<div class="carddetails">
-							<h2>Vehicle Registration</h2>
-						</div>
-					</div>
-					<div id="strongmuseum">
-						<figure class="thumbnail">
-							<img src="images/test3.jpg" alt="Vehicle Registration Thumbnail">
-						</figure>
-						<div class="carddetails">
-							<h2>Strong Meseum</h2>
-						</div>
-					</div>
-				</section>
-				<div class="hideshow">
-					<h1>Bonus</h1>
-					<figure class="hideshowicon">
-						<img src="icons/baseline-expand_more-24px.svg" alt="Hide/Show Icon">
-					</figure>
-				</div>
-				<section class="projgallery">
-					<div id="newsdeckcard">
-						<figure class="thumbnail">
-							<img src="" alt="News Deck Thumbnail">
-						</figure>
-						<div class="carddetails">
-							<h2>News Deck</h2>
-						</div>
-					</div>
-					<div id="mobilebanking">
-						<figure class="thumbnail">
-							<img src="" alt="Mobile Banking Thumbnail">
-						</figure>
-						<div class="carddetails">
-							<h2>Mobile Banking</h2>
-						</div>
-					</div>
-					<div id="Vehicle Registration">
-						<figure class="thumbnail">
-							<img src="" alt="Vehicle Registration Thumbnail">
-						</figure>
-						<div class="carddetails">
-							<h2>Vehicle Registration</h2>
-						</div>
-					</div>
-					<div id="Vehicle Registration">
-						<figure class="thumbnail">
-							<img src="" alt="Vehicle Registration Thumbnail">
-						</figure>
-						<div class="carddetails">
-							<h2>Vehicle Registration</h2>
-						</div>
-					</div>
-				</section>
-			</div>
-		</div>
+    </div>
 
-	</div>
-
-	<script src="interaction.js"></script>
+    <script src="interaction.js"></script>
 
 </body>
 
 <script>
+    function myFunction() {
+        var x = document.getElementById("myTopnav");
+        if (x.className === "topnav") {
+            x.className += " responsive";
+        } else {
+            x.className = "topnav";
+        }
+    }
 
-	$(window).scroll(function() {
-		var $height = $(window).scrollTop();
-		if ($height > 50) {
-			$("nav").css({
-				"background-color": "black",
-				"opacity": ".8"
-			});
-			$("a").css({
-				"color": "#fafafa",
-				"opacity": "1"
-			});
-			$(".site_name").css({
-				"color": "#fafafa",
-				"opacity": "1"
-			});
-			$("header div").css({
-				"opacity": "0"
-			});
-			$("#return_button").css({
-				"opacity": ".8"
-			});
-		} else {
-			$("nav").css({
-				"opacity": "1",
-				"background": "none"
-			});
-			$("a").css({
-				"color": "#333333"
-			});
-			$(".site_name").css({
-				"color": "#333333"
-			});
-			$("header h1").css({
-				"opacity": ".8"
-			});
-			$("header div").css({
-				"opacity": ".8"
-			});
-			$("#return_button").css({
-				"opacity": "0"
-			});
-		}
-	});
+    $(window).scroll(function() {
+        var $height = $(window).scrollTop();
+        if ($height > 50) {
+            $("nav").css({
+                "background-color": "black",
+                "opacity": ".8"
+            });
+            $("a").css({
+                "color": "#fafafa",
+                "opacity": "1"
+            });
+            $(".site_name").css({
+                "color": "#fafafa",
+                "opacity": "1"
+            });
+            $("header div").css({
+                "opacity": "0"
+            });
+            $("#return_button").css({
+                "opacity": ".8"
+            });
+        } else {
+            $("nav").css({
+                "opacity": "1",
+                "background": "none"
+            });
+            $("a").css({
+                "color": "#333333"
+            });
+            $(".site_name").css({
+                "color": "#333333"
+            });
+            $("header h1").css({
+                "opacity": ".8"
+            });
+            $("header div").css({
+                "opacity": ".8"
+            });
+            $("#return_button").css({
+                "opacity": "0"
+            });
+        }
+    });
 
-	$('header a').click(function() {
-		let target = $(this.hash);
-		$('html, body').animate({
-			scrollTop: target.offset().top - 65
-		}, 600);
-	});
-	$('#return_button a').click(function() {
-		let target = $(this.hash);
-		$('html, body').animate({
-			scrollTop: target.offset().top
-		}, 600);
-	});
+    $('header a').click(function() {
+        let target = $(this.hash);
+        $('html, body').animate({
+            scrollTop: target.offset().top - 65
+        }, 600);
+    });
+    $('#return_button a').click(function() {
+        let target = $(this.hash);
+        $('html, body').animate({
+            scrollTop: target.offset().top
+        }, 600);
+    });
 
-	$("#close").click(function() {
-		$("#navpanel").animate({
-			left: '-250'
-		}, "slow");
-		$("#close").toggle();
-		$("#open").toggle();
-		$("#navpanel").css({
-			"opacity": ".5"
-		});
-	});
+    $("#close").click(function() {
+        $("#navpanel").animate({
+            left: '-250'
+        }, "slow");
+        $("#close").toggle();
+        $("#open").toggle();
+        $("#navpanel").css({
+            "opacity": ".5"
+        });
+    });
 
-	$("#open").click(function() {
-		$("#navpanel").animate({
-			left: '0px'
-		}, "slow");
-		$("#close").toggle();
-		$("#open").toggle();
-		$("#navpanel").css({
-			"opacity": ".8"
-		});
-	});
+    $("#open").click(function() {
+        $("#navpanel").animate({
+            left: '0px'
+        }, "slow");
+        $("#close").toggle();
+        $("#open").toggle();
+        $("#navpanel").css({
+            "opacity": ".8"
+        });
+    });
 
-	$(".submenu").click(function() {
-		$(this).next(".submenu-panel").toggle();
-	});
+    $(".submenu").click(function() {
+        $(this).next(".submenu-panel").toggle();
+    });
 </script>
 
 
