fixed a bunch of stuff with the nav

--- a/final/index.html
+++ b/final/index.html
@@ -15,7 +15,8 @@
 <body>
     <nav>
         <div class="nav_elements">
-            <h1 class="site_name">Lefurge Design</h1>
+            <h1 class="site_name"><span class="full-text">Lefurge Design</span>
+<span class="short-text">LD</span></h1>
             <!-- Site Links-->
             <div id="navLinks">
                 <a href="index.html">Home</a>
@@ -30,6 +31,7 @@
                         <a href="news_deck.html">News Deck</a>
                         <a href="mobile_banking.html">Mobile Banking</a>
                         <a href="vehicle.html">Vehicle Registration</a>
+                        <a href="vehicle.html">Strong Museum</a>
                     </div>
                 </div>
             </div>
