started using modernizer

--- a/final/index.html
+++ b/final/index.html
@@ -7,6 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="https://use.typekit.net/xcp6ekd.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="modernizr-custom.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Andrew Lefurge - Home</title>
@@ -97,35 +98,37 @@
                 <section class="projgallery">
                     <div id="newsdeck">
                         <figure class="thumbnail">
-                            <img src="images/test1.jpg" alt="News Deck Thumbnail">
+                            <img class="modernimg" src="images/newsdeck/news_card.webp" alt="News Deck Thumbnail">
+                             <img class="legacyimg" src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
                         </figure>
-                        <div class="carddetails">
+                        <figcaption class="carddetails">
                             <h2>News Deck</h2>
-                        </div>
+                        </figcaption>
                     </div>
                     <div id="mobilebanking">
                         <figure class="thumbnail">
-                            <img src="images/test2.jpg" alt="Mobile Banking Thumbnail">
+                            <img class="modernimg" src="images/test2.jpg" alt="Mobile Banking Thumbnail">
+                             <img class="legacyimg" src="images/test2.jpg" alt="Mobile Banking Thumbnail">
                         </figure>
-                        <div class="carddetails">
+                        <figcaption class="carddetails">
                             <h2>Mobile Banking</h2>
-                        </div>
+                        </figcaption>
                     </div>
                     <div id="vehicleregistration">
                         <figure class="thumbnail">
                             <img src="images/test3.jpg" alt="Vehicle Registration Thumbnail">
                         </figure>
-                        <div class="carddetails">
+                        <figcaption class="carddetails">
                             <h2>Vehicle Registration</h2>
-                        </div>
+                        </figcaption>
                     </div>
                     <div id="strongmuseum">
                         <figure class="thumbnail">
                             <img src="images/test3.jpg" alt="Vehicle Registration Thumbnail">
                         </figure>
-                        <div class="carddetails">
+                        <figcaption class="carddetails">
                             <h2>Strong Meseum</h2>
-                        </div>
+                        </figcaption>
                     </div>
                 </section>
                 <div class="hideshow">
