this time with srcset

--- a/final/index.html
+++ b/final/index.html
@@ -17,7 +17,7 @@
     <nav>
         <div class="nav_elements">
             <h1 class="site_name"><span class="full-text">Lefurge Design</span>
-<span class="short-text">LD</span></h1>
+                <span class="short-text">LD</span></h1>
             <!-- Site Links-->
             <div id="navLinks">
                 <a href="index.html">Home</a>
@@ -97,10 +97,11 @@
                 </div>
                 <section class="projgallery">
                     <div id="newsdeck">
-                        <figure class="thumbnail">
+                        <picture class="thumbnail">
+                            <source srcset="images/newsdeck/news_card.webp" type="image/webp">
+                            <source srcset="images/" type="images/newsdeck/news_card.jpg">
                             <img class="modernimg" src="images/newsdeck/news_card.webp" alt="News Deck Thumbnail">
-                             <img class="legacyimg" src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
-                        </figure>
+                        </picture>
                         <figcaption class="carddetails">
                             <h2>News Deck</h2>
                         </figcaption>
@@ -108,7 +109,7 @@
                     <div id="mobilebanking">
                         <figure class="thumbnail">
                             <img class="modernimg" src="images/test2.jpg" alt="Mobile Banking Thumbnail">
-                             <img class="legacyimg" src="images/test2.jpg" alt="Mobile Banking Thumbnail">
+                            <img class="legacyimg" src="images/test2.jpg" alt="Mobile Banking Thumbnail">
                         </figure>
                         <figcaption class="carddetails">
                             <h2>Mobile Banking</h2>
