I hate this so much

--- a/final/index.html
+++ b/final/index.html
@@ -99,8 +99,8 @@
                     <div id="newsdeck">
                         <picture class="thumbnail">
                             <source srcset="images/newsdeck/news_card.webp" type="image/webp">
-                            <source srcset="images/" type="images/newsdeck/news_card.jpg">
-                            <img class="modernimg" src="images/newsdeck/news_card.webp" alt="News Deck Thumbnail">
+                            <source srcset="images/newsdeck/news_card.jpg" type="image/jpeg">
+                            <img src="images/newsdeck/news_card.jpg" alt="News Deck Thumbnail">
                         </picture>
                         <figcaption class="carddetails">
                             <h2>News Deck</h2>
